--- a/src/components/organisms/Nav.css
+++ b/src/components/organisms/Nav.css
@@ -20,9 +20,10 @@ aside .contact-button-list > .button-outline + .button-outline {
 
 aside .form-nav-logo {
   display: flex;
-  margin: 0 auto;
+  margin: 0;
   mix-blend-mode: multiply;
   max-width: 100%;
+  max-height: 50px;
 }
 
 .dashboard .side-menu button {
@@ -31,13 +32,24 @@ aside .form-nav-logo {
   width: 100%;
   color: var(--theme-primary);
 }
+/* visual separation sidebar <> main */
+.dashboard aside.side-menu {
+  border-right: 0.5px solid grey;
+  width: 250px;
+}
 
+/* border box on sidebar items */
+.dashboard aside.side-menu a {
+  border-bottom: 0.25px solid grey;
+}
+
+/* fix sidebar to delete double scroll in the page */
 @media (min-width: 750px) {
   .dashboard aside.side-menu {
-    position: sticky;
+    position: fixed;
     height: 100vh;
-    top: 0;
-    flex: 0 0 270px;
+    /* top: 0; */
+    flex: 0 0 250px;
     overflow-y: auto;
   }
 
